[package]
name = "chat"
version = "0.1.0"
authors = ["jasilven <jasilven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
async-std = {version= "1.7", features= ["unstable", "attributes"]}
# tokio = { version = "0.3", features = ["full"] }
